clusters/beryjuio-prod/registry/pullthrough/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: pullthrough
  name: registry-pullthrough
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
      app.kubernetes.io/instance: pullthrough
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
        app.kubernetes.io/instance: pullthrough
    spec:
      containers:
        - image: docker.io/library/registry:3.0.0-beta.1
          imagePullPolicy: Always
          name: registry
          resources:
            requests:
              memory: 300M
              cpu: 50m
            limits:
              memory: 1Gi
              cpu: "4"
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
            - containerPort: 5001
              name: http-metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /metrics
              port: 5001
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /metrics
              port: 5001
            initialDelaySeconds: 5
          volumeMounts:
            - name: jwt-cert
              readOnly: true
              mountPath: "/srv/docker/cert"
      volumes:
        - name: jwt-cert
          secret:
            secretName: registry-jwt-cert
