clusters/beryjuio-prod/registry/pullthrough/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-pullthrough
  namespace: registry
spec:
  ingressClassName: istio
  rules:
    - host: proxy.registry.beryju.io
      http:
        paths:
          - backend:
              service:
                name: registry-pullthrough
                port:
                  number: 5000
            path: /
            pathType: Prefix
    - host: proxy.registry.beryju.org
      http:
        paths:
          - backend:
              service:
                name: registry-pullthrough
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - proxy.registry.beryju.io
        - proxy.registry.beryju.org
      secretName: beryjuorg-gw-registries
